fix image not loaded in GAE environment issue

--- a/app.yaml
+++ b/app.yaml
@@ -17,3 +17,8 @@ runtime: nodejs10
 
 env_variables:
   PORT: 8080
+
+- url: images/(.*\.png)
+  mime_type: image/png
+  static_files: public/images/\1
+  upload: public/images/(.*\.png)
