--- a/app.yaml
+++ b/app.yaml
@@ -19,6 +19,6 @@ env_variables:
   PORT: 8080
 
 handlers:
-- url: /images/(.*\.png)
-  static_files: public/images/\1
-  upload: public/images/(.*\.png)
+- url: /images
+  static_dir: public/images
+  
